--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		.wrapper{width:1100px;margin:0 auto;overflow:hidden;}
 		ul{padding:0;margin:0;white-space:nowrap;}
 		ul:after{display:block;content:'';clear:both;font-size:0;}
-		li{width:200px;height:300px;background:#333;color:#fff;font-size:48px;text-align:center;list-style:none;display:inline-block;margin:0 10px;}
+		li{float:left;width:200px;height:300px;background:#333;color:#fff;font-size:48px;text-align:center;list-style:none;display:inline-block;margin:0 10px;}
 		
 	</style>
 </head>
